--- a/user_registration_bs4/templates/base.html
+++ b/user_registration_bs4/templates/base.html
@@ -1,14 +1,13 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<title>{% block head_title %}{% endblock %}</title>
+{% comment %} <title>{% block head_title %}{% endblock %}</title> {% endcomment %}
 
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/user_registration_bs4.css' %}">
-
-
+    {% comment %} <link rel="stylesheet" href="{% static 'css/user_registration_bs4.css' %}"> {% endcomment %}
+    <title>{% block head_title %}{% endblock %}</title>
 </head>
 <body>
 
