--- a/user_registration_bs4/templates/header.html
+++ b/user_registration_bs4/templates/header.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white" id="mainNav">
     <div class="container">
-        <a class="navbar-brand " href="/">Web Application</a>
+        <a class="navbar-brand " href="/">TGCB Company </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation">
