--- a/webpages/templates/webpages/homepage.html
+++ b/webpages/templates/webpages/homepage.html
@@ -3,12 +3,14 @@
 {% load i18n %}
 {% load bootstrap4 %}
 
-{% block head_title %}Web Application{% endblock %}
+{% block head_title %}TransNational Grant Community Board Company Registration Form{% endblock %}
 
 {% block content %}
+
 <section style="background: white;">
     <div class="container">
-        <div class="row">
+        
+        <!-- <div class="row">
             <div class="col col-12 pb-5">
                 <div class="clearfix"></div>
                 <h1 class=" " style="margin-top: 15rem;">Django Web Application Example</h1>
@@ -23,6 +25,17 @@
                         <button type="submit" class="btn btn-primary">Search</button>
                     </div>
                 </form>    
+            </div>
+
+        </div> -->
+        <div class="row">
+            <div class="col col-12 pb-5">
+                <div class="clearfix"></div>
+                {% comment %} <img src="{% static 'webpages/images/tn.png' %}" alt="TransNational Grant Community Board Company" style="width: 100px; height: 100px;"> {% endcomment %}
+                <h1 class=" " style="margin-top: 15rem;">TransNational Grant Community Board Company</h1>
+                <p>In Order to qualify for the Grant You need to <strong>Register</strong> Your Company</p>
+                <p>Get Started</p>
+                <button><a href="{% url 'company-create' %}">Register</a></button>
             </div>
 
         </div>
