--- a/user_registration_bs4/templates/base.html
+++ b/user_registration_bs4/templates/base.html
@@ -8,6 +8,8 @@
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     {% comment %} <link rel="stylesheet" href="{% static 'css/user_registration_bs4.css' %}"> {% endcomment %}
     <title>{% block head_title %}{% endblock %}</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
 
